--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,72 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   font-family: "Poppins", sans-serif;
   color-scheme: dark;
+} */
+
+
+/* styles.css */
+.hero-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.hero-section__left {
+  flex-basis: 50%;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.hero-section__right {
+  flex-basis: 50%;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.hero-title {
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
+}
+
+.hero-subtitle {
+  font-size: 18px;
+  font-weight: bold;
+  color: #666;
+}
+
+.hero-description {
+  font-size: 16px;
+  color: #999;
+}
+
+.profile-picture {
+  height: 400px;
+  width: 400px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-top: 40px;
+}
+
+.call-to-action {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.call-to-action__button {
+  background-color: #333;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.call-to-action__button:hover {
+  background-color: #444;
 }
